added header video

--- a/index.html
+++ b/index.html
@@ -2,49 +2,33 @@
 
 <!DOCTYPE html>
 <html data-edit-mode="False">
-
-<!-- Mirrored from www.maerseaweed.com/en/maer/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Sep 2020 07:06:45 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta charset="utf-8">
-    <!--Meta tags -->
-    <title>M&#230;r Seaweed - maerseaweed.com</title>
-    <meta name="description" content="Our gourmet-standard seaweed is a superfood in every sense. It is incredibly versatile, bursting with natural flavour. ">
+    <title>Indomie Kenya</title>
+    <meta name="description" content="Indomie Kenya Official website">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex">
     <!-- Open Graph tags -->
-    <meta property="og:site_name" content="Mær Seaweed" />
+    <meta property="og:site_name" content="Indomie Kenya" />
     <meta property="og:image" content="">
     <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="index.html" />
-    <meta property="og:title" content="M&#230;r Seaweed" />
-    <meta property="og:description" content="Our gourmet-standard seaweed is a superfood in every sense. It is incredibly versatile, bursting with natural flavour. " />
+    <meta property="og:title" content="Indomie Kenya" />
+    <meta property="og:description" content="Official Indomie Kenya website " />
     <!-- Twitter tags -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="" />
+    <meta name="twitter:site" content="https://twitter.com/IndomieKenya" />
     <meta name="twitter:creator" content="" />
-    <link rel="icon" href="https://www.maerseaweed.com/Content/Maer/img/icons/favicon.ico?v=1" type="image/x-icon" />
+    <link rel="icon" href="/Content/Maer/img/icons/favicon.ico?v=1" type="image/x-icon" />
     <link rel="alternate" href="index.html" hreflang="en" />
-    <link rel="alternate" href="https://www.maerseaweed.com/no/maer/" hreflang="no" />
+    <link rel="alternate" href="https://indomie.ke" hreflang="no" />
     <link rel="alternate" href="index.html" hreflang="x-default" />
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        '../../../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WSF7MJ2');</script>
-<!-- End Google Tag Manager -->
-
     <link href="../../Content/Maer/css/app.min.css" rel="stylesheet" />
 </head>
 <body class="body-home">
-
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSF7MJ2"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 <div class="overlay-menu">
     <div class="background">
         <div class="grid-container">
@@ -54,7 +38,7 @@
                     <nav class="primary-nav">
                         <ul class="menu">
                                 <li class="menu-item link-story">
-                                    <a class="masklink" href="story/index.html">The Mǽr Story</a>
+                                    <a class="masklink" href="story/index.html">The Indomie Story</a>
                                         <div class="page-mask page-mask-story">
                                             <img src="../../imagevault/publishedmedia/3owt9vbkh2lkxp5njjlg/story-hero.jpg" alt="M&#230;r box product in liquid surronding" />
                                         </div>
@@ -75,7 +59,7 @@
                                         </div>
                                 </li>
                                 <li class="menu-item link-about">
-                                    <a class="masklink" href="about/index.html">About Mǽr</a>
+                                    <a class="masklink" href="about/index.html">About Indomie</a>
                                         <div class="page-mask page-mask-about">
                                             <img src="../../imagevault/publishedmedia/59jz1nxzet4eo2z6d7uf/about-hero.jpg" alt="Multiple M&#230;r box products scattered on fine grain sand" />
                                         </div>
@@ -95,11 +79,9 @@
                                     <a href="privacy-policy/index.html">Privacy Policy</a>
                                 </li>
                                 <li class="menu-item wpml-ls-item wpml-ls-current-language">
-                                    <a href="index.html">EN</a>
+                                    <a href="index.html">Home</a>
                                 </li>
-                                <li class="menu-item wpml-ls-item ">
-                                    <a href="https://www.maerseaweed.com/no/maer/">NO</a>
-                                </li>
+                                
                         </ul>
                     </nav>
 
@@ -155,7 +137,7 @@
 
 <section class="section home-hero dark">
     <video autoplay playsinline muted loop poster="../../Content/Maer/img/maer-brand-film-bg-hero.jpg" data-keepplaying>
-        <source src="https://www.maerseaweed.com/Content/Maer/video/maer-brand-film-bg-hero.mp4" type="video/mp4">
+        <source src="../../Content/Maer/img/indomie.mp4" type="video/mp4">
     </video>
 
     <div class="content-wrapper">
