--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             <div class="grid-container">
 
                 <div class="hero-width">
-                    <h1>The food of the future and probably the world’s most nutritious food.</h1>
+                    <h1>Nutritious, Delicious, Made from Wheat Flour</h1>
 
-                    <a class="cta-link" href="http://vimeo.com/317506623" data-lity><span>Watch the brand film</span></a>
+                    <a class="cta-link" href="https://www.youtube.com/c/IndomieKenya/videos" data-lity><span>Watch Recipes </span></a>
                 </div>
 
             </div>
@@ -165,7 +165,7 @@
 
                 <div class="fade-in-up-lineheight">
 
-                    <h2>The Mǽr Story</h2>
+                    <h2>The Indomie Story</h2>
 
                     <p class="large rte-style__large_paragraph">Maér is an old Norse word meaning the untouched. Seaweed hides in the depths, unspoilt. Pure. This remarkable delicacy is probably the world&rsquo;s most nutritious food. The food of the future.</p>
 
