changed header and video

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div id="fullpage">
 
 <section class="section home-hero dark">
-    <video autoplay playsinline muted loop poster="../../Content/Maer/img/maer-brand-film-bg-hero.jpg" data-keepplaying>
+    <video autoplay playsinline muted loop poster="../../Content/Maer/img/header.jpg" data-keepplaying>
         <source src="../../Content/Maer/vid/indomie.mp4" type="video/mp4">
     </video>
 
@@ -167,7 +167,7 @@
 
                     <h2>The Indomie Story</h2>
 
-                    <p class="large rte-style__large_paragraph">Maér is an old Norse word meaning the untouched. Seaweed hides in the depths, unspoilt. Pure. This remarkable delicacy is probably the world&rsquo;s most nutritious food. The food of the future.</p>
+                    <p class="large rte-style__large_paragraph"> Indomie was first introduced in Kenya in 2009 under the distribution company, Salim Wazaran Kenya Company Limited (SAWAKE). Our noodles are made from carefully selected ingredients, the best quality flour and fresh spices from the natural resources of Indonesia giving it a unique and delicious flavor.</p>
 
                 </div>
 
@@ -178,7 +178,7 @@
         </div>
 
             <div class="cta-wrap">
-                <a class="cta-link" href="story/index.html"><span>The Mǽr Story</span></a>
+                <a class="cta-link" href="story/index.html"><span>The Indomie Story</span></a>
             </div>
     </div>
 </section><section class="section section-products light">
