--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="https://twitter.com/IndomieKenya" />
     <meta name="twitter:creator" content="" />
-    <link rel="icon" href="/Content/Maer/img/icons/favicon.ico?v=1" type="image/x-icon" />
+    <link rel="icon" href="../../Content/Maer/img/favicon.ico?v=1" type="image/x-icon" />
     <link rel="alternate" href="index.html" hreflang="en" />
     <link rel="alternate" href="https://indomie.ke" hreflang="no" />
     <link rel="alternate" href="index.html" hreflang="x-default" />
@@ -93,28 +93,7 @@
     <div class="grid-container">
         <div class="header-grid">
             <div class="hg-col-1">
-                <a href="index.html">
-<svg class="logo-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 80.9 31.6" xml:space="preserve" aria-labelledby="maerTitle maerDesc" role="img">
-    <title id="maerTitle">Mær text logo containing concatenated a and e with apostrophe.</title>
-    <desc id="maerDesc">Mær text logo containing concatenated a and e with apostrophe.</desc>
-    <g>
-        <path class="fill" d="M21.2,10.8c-2.6,0-5,1.3-6.4,3.5C12.6,10.8,8,9.8,4.5,12c-0.4,0.2-0.7,0.5-1,0.8v-1.7H0.9v19.5h2.6v-12
-      c-0.1-2.8,2.2-5.1,5-5.2s5.1,2.2,5.2,5c0,0.1,0,0.1,0,0.2v12h2.6v-12c-0.1-2.8,2.2-5.1,5-5.2s5.1,2.2,5.2,5c0,0.1,0,0.1,0,0.2v12
-      h2.6v-12C28.9,14.4,25.5,10.9,21.2,10.8z"/>
-        <path class="fill" d="M40,13.4c1.8,0,3.4,1,4.3,2.5h2v-1.6c-2.3-3.5-6.9-4.5-10.4-2.3c-1.4,0.9-2.5,2.3-3,3.9h2.8C36.5,14.4,38.2,13.5,40,13.4z"
-        />
-        <path class="fill" d="M54.2,10.8c-2.6,0-5,1.3-6.4,3.5v1.6h2c0.9-1.5,2.5-2.5,4.3-2.5c2.8,0,5.1,2.3,5.1,5.2v1l-6.4,0h-15
-      c-3.4,0-5.8,2.2-5.8,5.3c0,3.3,2.6,5.9,5.9,6h2c2.6,0,5-1.3,6.4-3.5v-1.6h-2c-0.9,1.5-2.6,2.5-4.3,2.5h-2c-1.8,0-3.3-1.5-3.3-3.4
-      c0-2,1.6-2.7,3.2-2.7h24v-3.5C61.8,14.4,58.4,10.9,54.2,10.8z"/>
-        <path class="fill" d="M54.2,28.2c-1.8,0-3.4-1-4.3-2.5h-2v1.6c2.3,3.5,6.9,4.5,10.4,2.3c1.4-0.9,2.5-2.3,3.1-3.9h-2.8
-      C57.6,27.2,55.9,28.2,54.2,28.2z"/>
-        <path class="fill" d="M72.9,10.8c-1.9,0-3.7,0.7-5.1,2v-1.7h-2.6v19.5h2.6v-12c0-2.8,2.3-5.1,5.1-5.2c1.8,0,3.4,1,4.3,2.5H80
-      C78.9,12.9,76.1,10.9,72.9,10.8z"/>
-        <polygon class="fill" points="50.6,2.6 48.9,0.8 45,4.8 46.8,6.6    "/>
-    </g>
-</svg>
-
-                </a>
+                <a href="index.html"> <img src="../../Content/Maer/img/logo-indomie.png" alt="logo indomie"></a>
             </div>
             <div class="hg-col-2">
                 <button class="mobile-menu-toggle toggle-closed">
