--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <nav class="primary-nav">
                         <ul class="menu">
                                 <li class="menu-item link-story">
-                                    <a class="masklink" href="story/index.html">The Indomie Story</a>
+                                    <a class="menu-item link-products" href="story/index.html">The Indomie Story</a>
                                         <div class="page-mask page-mask-story">
                                             <img src="../../imagevault/publishedmedia/3owt9vbkh2lkxp5njjlg/story-hero.jpg" alt="M&#230;r box product in liquid surronding" />
                                         </div>
@@ -47,19 +47,19 @@
                                     <a class="masklink" href="products/index.html">Products</a>
                                 </li>
                                 <li class="menu-item link-inspiration">
-                                    <a class="masklink" href="inspiration/index.html">Inspiration</a>
+                                    <a class="menu-item link-products" href="inspiration/index.html">Inspiration</a>
                                         <div class="page-mask page-mask-inspiration">
                                             <img src="../../imagevault/publishedmedia/1yzvolzmgm1geyl9bx6i/Inspirasjon_POPCORN_16-9.jpg" alt="Popcorn in a bowl on a table with scattered pieces of popcorn and chess pieces" />
                                         </div>
                                 </li>
                                 <li class="menu-item link-facts">
-                                    <a class="masklink" href="facts-and-benefits/index.html">Facts and Benefits</a>
+                                    <a class="menu-item link-products" href="facts-and-benefits/index.html">Facts and Benefits</a>
                                         <div class="page-mask page-mask-facts">
                                             <img src="../../imagevault/publishedmedia/ukax3wq79lkyh0nm2z12/facts-benefits-hero.jpg" alt="Two M&#230;r box products with the one in front placed on hovering rock plate" />
                                         </div>
                                 </li>
                                 <li class="menu-item link-about">
-                                    <a class="masklink" href="about/index.html">About Indomie</a>
+                                    <a class="menu-item link-products" href="about/index.html">About Indomie</a>
                                         <div class="page-mask page-mask-about">
                                             <img src="../../imagevault/publishedmedia/59jz1nxzet4eo2z6d7uf/about-hero.jpg" alt="Multiple M&#230;r box products scattered on fine grain sand" />
                                         </div>
