--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     <a class="masklink" href="facts-and-benefits/index.html">Facts and Benefits</a>
                                 </li>
                                 <li class="menu-item link-about">
-                                    <a class="masklink" href="about/index.html">About Indomie</a>
+                                    <a class="masklink" href="about/index.html">About Indomie</a>em
                                 </li>
                             
                             
@@ -532,8 +532,8 @@
                 <div class="cell large-3 cell-2">
 
                     <div class="anim2">
-                        <p>Email<br /><a title="post@maerseaweed.com" href="mailto:post@maerseaweed.com" target="_blank" rel="noopener">post@maerseaweed.com</a></p>
-<p>Phone<br /><a title="(+47) 55 213 650" href="tel:(+47)55213650">(+47) 55 213 650</a></p>
+                        <p>Email<br /><a title="info@sawake.co.ke" href="mailto:info@sawake.co.ke" target="_blank" rel="noopener">info@sawake.co.ke</a></p>
+<p>Phone<br /><a title="+254 (0) 734 412 525" href="tel:+254734412525">+254 734 412 525</a></p>
                     </div>
 
                 </div>
@@ -541,7 +541,7 @@
                 <div class="cell large-3 cell-3">
 
                     <div class="anim3">
-                        <p><a title="Facebook" href="https://www.facebook.com/maerseaweed/?modal=admin_todo_tour" target="_blank" rel="noopener">Facebook</a><br /><a title="Instagram" href="https://www.instagram.com/maerseaweed/" target="_blank" rel="noopener">Instagram</a></p>
+                        <p><a title="Facebook" href="https://www.facebook.com/indomieKE/?modal=admin_todo_tour" target="_blank" rel="noopener">Facebook</a><br /><a title="Instagram" href="https://www.instagram.com/indomieKE/" target="_blank" rel="noopener">Instagram</a></p>
 <p><a title="Privacy Policy" href="privacy-policy/index.html" target="_blank" rel="noopener">Privacy Policy</a></p>
                     </div>
 
@@ -558,7 +558,7 @@
 
             <div class="grid-x grid-margin-x grid-margin-y copyright-grid">
                 <div class="cell">
-Mær is a product from Lerøy Seafood. 2020 Mær. All Rights Reserved. Design and Concept by <a href="http://www.kindnorway.com/" target="_blank">KIND</a>                </div>
+IndomieKE. 2020. All Rights Reserved. Design and Concept by <a href="http://www.zuphi.design/" target="_blank">Zuphi</a>                </div>
             </div>
 
         </div>
@@ -572,5 +572,4 @@ Mær is a product from Lerøy Seafood. 2020 Mær. All Rights Reserved. Design an
 <script src="../../Content/Maer/js/app.min.js"></script>
 </body>
 
-<!-- Mirrored from www.maerseaweed.com/en/maer/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Sep 2020 07:06:45 GMT -->
 </html>
