updated  facts and  benefits

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
                     <h2>Facts and Benefits</h2>
 
-                    <p class="rte-style__large_paragraph large">Seaweed has been a key part of the human diet for thousands of years and is possibly the most nutritious food in the world. At least we believe so.</p>
+                    <p class="rte-style__large_paragraph large">Indomie is made of Wheat flour from Kenya’s finest quality of wheat. Wheat is rich in Vitamin B complex which helps growth and it is part of the composition of many of the enzymes that are catalysts in food dismantle and digestion and is therefore considered essential to obtain the necessary energy for the human body. Vitamin B prevents nerve spasms too.</p>
 
                 </div>
 
