updated socialmedia links

--- a/index.html
+++ b/index.html
@@ -541,7 +541,8 @@
                 <div class="cell large-3 cell-3">
 
                     <div class="anim3">
-                        <p><a title="Facebook" href="https://www.facebook.com/indomieKE/?modal=admin_todo_tour" target="_blank" rel="noopener">Facebook</a><br /><a title="Instagram" href="https://www.instagram.com/indomieKE/" target="_blank" rel="noopener">Instagram</a></p>
+                        <p><a title="Facebook" href="https://www.facebook.com/indomieKE/" target="_blank" rel="noopener">Facebook</a><br /><a title="Instagram" href="https://www.instagram.com/indomie_kenya/" target="_blank" rel="noopener">Instagram</a>
+                            <a title="Twitter" href="https://www.twitter.com/indomieKE/" target="_blank" rel="noopener">Twitter</a></p>
 <p><a title="Privacy Policy" href="privacy-policy/index.html" target="_blank" rel="noopener">Privacy Policy</a></p>
                     </div>
 
