--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <div class="product-img-wrapper">
         <div class="img-holder">
-                <img class="product-img" src="../../imagevault/publishedmedia/gp77f7le64ykfy4944k6/product-1.png" alt="M&#230;r Seaweed salt product packaging">
+                <img class="product-img" src="../../Content/maer/img/3.jpg" alt="Indomie Chicken Flavor">
             <a href="products/seaweed-salt/indexc197.html?basicView=true" class="ajax-link product-link">
                 <div class="horizontal"></div>
                 <div class="vertical"></div>
@@ -169,8 +169,8 @@
         </div>
     </div>
     <div class="product-title">
-        <h3>Seaweed Salt</h3>
-        <span class="sub-title">Natural 90g</span>
+        <h3>Indomie Chicken Flavor</h3>
+        <span class="sub-title">Jumbo 120g</span>
     </div>
 
 </li>
@@ -179,7 +179,7 @@
 
     <div class="product-img-wrapper">
         <div class="img-holder">
-                <img class="product-img" src="../../imagevault/publishedmedia/j9e59gl29ez3lxcttssq/product-2.png" alt="M&#230;r Seaweed Sea salt product packaging">
+                <img class="product-img" src="../../Content/maer/img/1.jfif" alt="Indomie Beef Flavor">
             <a href="products/seaweed-sea-salt/indexc197.html?basicView=true" class="ajax-link product-link">
                 <div class="horizontal"></div>
                 <div class="vertical"></div>
@@ -187,8 +187,8 @@
         </div>
     </div>
     <div class="product-title">
-        <h3>Seaweed Sea Salt</h3>
-        <span class="sub-title">80g</span>
+        <h3>Indomie Beef Flavor</h3>
+        <span class="sub-title"> Jumbo 120g</span>
     </div>
 
 </li>
@@ -197,7 +197,7 @@
 
     <div class="product-img-wrapper">
         <div class="img-holder">
-                <img class="product-img" src="../../imagevault/publishedmedia/cnh1s1i565hdmf28bqg3/product-3.png" alt="M&#230;r Seaweed mediterranean product packaging">
+                <img class="product-img" src="../../Content/maer/img/5.jpg" alt="Indomie SupaMojo">
             <a href="products/seaweed-spice/indexc197.html?basicView=true" class="ajax-link product-link">
                 <div class="horizontal"></div>
                 <div class="vertical"></div>
@@ -205,8 +205,8 @@
         </div>
     </div>
     <div class="product-title">
-        <h3>Seaweed Spice  Mediterranean</h3>
-        <span class="sub-title">Mediterranean 70g</span>
+        <h3>Indomie SupaMojo </h3>
+        <span class="sub-title">5 pack</span>
     </div>
 
 </li>
