--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
     <div class="product-img-wrapper">
         <div class="img-holder">
-                <img class="product-img" src="../../Content/maer/img/1.jfif" alt="Indomie Beef Flavor">
+                <img class="product-img" src="../../Content/maer/img/10.png" alt="Indomie Beef Flavor">
             <a href="products/seaweed-sea-salt/indexc197.html?basicView=true" class="ajax-link product-link">
                 <div class="horizontal"></div>
                 <div class="vertical"></div>
@@ -188,7 +188,7 @@
     </div>
     <div class="product-title">
         <h3>Indomie Beef Flavor</h3>
-        <span class="sub-title"> Jumbo 120g</span>
+        <span class="sub-title"> 70g</span>
     </div>
 
 </li>
@@ -507,7 +507,7 @@
 
             </div>
             <div class="cell medium-5 img-col">
-                    <img class="fade-in-up" src="../../imagevault/publishedmedia/k71l05r37ve79thw5nu9/facts-benefits-intro.jpg" alt="Two M&#230;r box products with the closest hovering on a rock stand">
+                    <img class="fade-in-up" src="../../Content/Maer/img/10.jpg" alt="Indomie on a plate">
             </div>
         </div>
 
