--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="https://twitter.com/IndomieKenya" />
     <meta name="twitter:creator" content="" />
-    <link rel="icon" href="/Indomie-Kenya/img/favicon.ico?v=1" type="image/x-icon" />
+    <link rel="icon" href="/img/favicon.ico?v=1" type="image/x-icon" />
     <link rel="alternate" href="index.html" hreflang="en" />
     <link rel="alternate" href="https://indomie.ke" hreflang="no" />
     <link rel="alternate" href="index.html" hreflang="x-default" />
-    <link href="/Indomie-Kenya/app.min.css" rel="stylesheet" />
+    <link href="/app.min.css" rel="stylesheet" />
 </head>
 <body class="body-home">
 <div class="overlay-menu">
@@ -81,7 +81,7 @@
     <div class="grid-container">
         <div class="header-grid">
             <div class="hg-col-1">
-                <a href="index.html"> <img src="/../../img/logo-indomie.png" alt="logo indomie"></a>
+                <a href="index.html"> <img src="/img/logo-indomie.png" alt="logo indomie"></a>
             </div>
             <div class="hg-col-2">
                 <button class="mobile-menu-toggle toggle-closed">
@@ -570,7 +570,7 @@ IndomieKE. 2020. All Rights Reserved. Design and Concept by <a href="http://www.
 
     </div>
 </div>
-<script src="/js/app.min.js"></script>
+<script src="/app.min.js"></script>
 </body>
 
 </html>
