--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="grid-container">
 
                 <div class="hero-width">
-                    <h1>Nutritious, Delicious, Made from Wheat Flour</h1>
+                    <h1>Kenya's best loved noodles.</h1>
 
                     <a class="cta-link" href="https://www.youtube.com/c/IndomieKenya/videos" data-lity><span>Watch Recipes </span></a>
                 </div>
@@ -272,24 +272,24 @@
                   <ul class="accordion">
 <li class="accordion-item">
     <div class="accordion-header" data-insp-point="1">
-        <h3><span>Shrimps</span></h3>
+        <h3><span>Nutritious</span></h3>
     </div>
     <div class="accordion-body">
-        <p>Pimp you shrimp with M&#230;r Sea Salt and get more out of this tiny, yet tasty crustaceans.</p>
+        <p></p>
     </div>
 </li><li class="accordion-item">
     <div class="accordion-header" data-insp-point="2">
-        <h3><span>Sweet potato fries</span></h3>
+        <h3><span>Delicious</span></h3>
     </div>
     <div class="accordion-body">
-        <p>Date night and you want to impress? Try sweet potato fries with M&#230;r Sea Salt. Your date will stick around forever.</p>
+        <p></p>
     </div>
 </li><li class="accordion-item">
     <div class="accordion-header" data-insp-point="3">
-        <h3><span>Brownie</span></h3>
+        <h3><span>#mautam</span></h3>
     </div>
     <div class="accordion-body">
-        <p>Brownies is a super delicious, sweet favourite in every corner of the world. We feel that by adding Mǽr Sea Salt to your brownies, you turn it up a notch and will achieve a sensational combination of sweet and savory.</p>
+        <p></p>
     </div>
 </li>                  </ul>
 
@@ -339,24 +339,24 @@
                   <ul class="accordion">
 <li class="accordion-item">
     <div class="accordion-header" data-insp-point="1">
-        <h3><span>Pizza</span></h3>
+        <h3><span>Playful</span></h3>
     </div>
     <div class="accordion-body">
-        <p>Be playful and creative with your ingredients and add M&#230;r Mediterranean for a tasty result. Saturday is the most popular night to eat pizza, but did you know that pizza can be eaten on Wednesdays as well?</p>
+        <p></p>
     </div>
 </li><li class="accordion-item">
     <div class="accordion-header" data-insp-point="2">
-        <h3><span>Pasta</span></h3>
+        <h3><span>Healthy</span></h3>
     </div>
     <div class="accordion-body">
-        <p>The average Italian eats 60 pounds of pasta per year. That number could easily be doubled after trying pasta with M&#230;r Mediterranean. Just boil, fry or bake your pasta as usual and add M&#230;r on top of it.</p>
+        <p></p>
     </div>
 </li><li class="accordion-item">
     <div class="accordion-header" data-insp-point="3">
         <h3><span>Sandwich</span></h3>
     </div>
     <div class="accordion-body">
-        <p>Sandwich is named after Lord Sandwich who passed away in 1792, before he got the chance to try his sandwich with M&#230;r Mediterranean. The good news is that you are alive, and can honor him by adding M&#230;r to your sub.</p>
+        <p>Irresistable</p>
     </div>
 </li>                  </ul>
 
@@ -409,21 +409,21 @@
         <h3><span>Popcorn</span></h3>
     </div>
     <div class="accordion-body">
-        <p>Popcorn is the number one snack at the movies. We know this already. But by adding M&#230;r Salt to your popcorn, it could possible become the number one snack at the Bolshoi Ballet in Russia as well.</p>
+        <p></p>
     </div>
 </li><li class="accordion-item">
     <div class="accordion-header" data-insp-point="2">
-        <h3><span>Egg</span></h3>
+        <h3><span>Breakfast</span></h3>
     </div>
     <div class="accordion-body">
-        <p>No matter how you prefer your eggs, it will taste better with M&#230;r Salt. With it’s natural salty taste, seaweed works perfectly in any dish that requires salt, and will give you the rich umami flavor.</p>
+        <p></p>
     </div>
 </li><li class="accordion-item">
     <div class="accordion-header" data-insp-point="3">
-        <h3><span>Honeymelon</span></h3>
+        <h3><span>Lunch</span></h3>
     </div>
     <div class="accordion-body">
-        <p>&#171;Honeymelon, I’m home&#187; will be the next thing you shout out while you sprinkle this delicious fruit with M&#230;r Salt. Combine this with serrano ham and serve it to the people you like the most.</p>
+        <p></p>
     </div>
 </li>                  </ul>
 
@@ -439,21 +439,21 @@
 <nav class="inspiration-product-nav insp-desktop">
     <div class="grid-container">
         <div class="track">
-            <div class="menu-label">Products</div>
+            <div class="menu-label">Inspiration</div>
             <ul class="menu">
                     <li class="menu-item">
-                        <a href="inspiration/seaweed-sea-salt/index.html">
-                            <span class="active-product swap-section" data-insp-menu="1">Seaweed Sea Salt</span>
+                        <a href="supamojo.html">
+                            <span class="active-product swap-section" data-insp-menu="1">SupaMojo</span>
                         </a>
                     </li>
                     <li class="menu-item">
-                        <a href="inspiration/mediterranean/index.html">
-                            <span class=" swap-section" data-insp-menu="2">Mediterranean</span>
+                        <a href="chicken.html">
+                            <span class=" swap-section" data-insp-menu="2">Chicken</span>
                         </a>
                     </li>
                     <li class="menu-item">
-                        <a href="inspiration/seaweed-salt/index.html">
-                            <span class=" swap-section" data-insp-menu="3">Seaweed Salt</span>
+                        <a href="beef.html">
+                            <span class=" swap-section" data-insp-menu="3">Beef</span>
                         </a>
                     </li>
             </ul>
@@ -467,18 +467,18 @@
     <div class="track glide__track" data-glide-el="track">
         <ul class="menu glide__slides">
             <li class="menu-item glide__slide">
-                <a href="inspiration/seaweed-sea-salt/index.html">
-                    <span class="active-product swap-section" data-insp-menu="1">Seaweed Sea Salt</span>
+                <a href="chicken.html">
+                    <span class="active-product swap-section" data-insp-menu="1">Chicken</span>
                 </a>
             </li>
             <li class="menu-item glide__slide">
-                <a href="inspiration/mediterranean/index.html">
-                    <span class=" swap-section" data-insp-menu="2">Mediterranean</span>
+                <a href="beef.html">
+                    <span class=" swap-section" data-insp-menu="2">Beef</span>
                 </a>
             </li>
             <li class="menu-item glide__slide">
-                <a href="inspiration/seaweed-salt/index.html">
-                    <span class=" swap-section" data-insp-menu="3">Seaweed Salt</span>
+                <a href="supamojo.html">
+                    <span class=" swap-section" data-insp-menu="3">SupaMojo</span>
                 </a>
             </li>
         </ul>
@@ -512,7 +512,7 @@
         </div>
 
             <div class="cta-wrap">
-                <a class="cta-link" href="facts-and-benefits/index.html"><span>Check out the facts and benefits</span></a>
+                <a class="cta-link" href="facts-and-benefits.html"><span>Check out the facts and benefits</span></a>
             </div>
     </div>
 </section>
@@ -541,7 +541,7 @@
                 <div class="cell large-3 cell-3">
 
                     <div class="anim3">
-                        <p><a title="Facebook" href="https://www.facebook.com/indomieKE/" target="_blank" rel="noopener">Facebook</a><br /><a title="Instagram" href="https://www.instagram.com/indomie_kenya/" target="_blank" rel="noopener">Instagram</a>
+                        <p><a title="Facebook" href="https://www.facebook.com/indomieKE/" target="_blank" rel="noopener">Facebook</a><br /><a title="Instagram" href="https://www.instagram.com/indomie_kenya/" target="_blank" rel="noopener">Instagram</a><br />
                             <a title="Twitter" href="https://www.twitter.com/indomieKE/" target="_blank" rel="noopener">Twitter</a></p>
 <p><a title="Privacy Policy" href="privacy-policy/index.html" target="_blank" rel="noopener">Privacy Policy</a></p>
                     </div>
