--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             </div>
             <div class="cell medium-5 img-col">
-                    <img class="fade-in-up" src="https://www.maerseaweed.com/imagevault/publishedmedia/qf88jobbz7c0r8n7534c/seaweed-small.svg" alt="Abstract pattern">
+                    <img class="fade-in-up" src="/img/1.jpg" alt="Indomie Block pattern">
             </div>
         </div>
 
