tried touching story ,added #

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <meta property="og:image" content="">
     <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="index.html" />
+    <meta property="og:url" content="Indomie.ke" />
     <meta property="og:title" content="Indomie Kenya" />
     <meta property="og:description" content="Official Indomie Kenya website " />
     <!-- Twitter tags -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="https://twitter.com/IndomieKenya" />
-    <meta name="twitter:creator" content="" />
-    <link rel="icon" href="/img/favicon.ico?v=1" type="image/x-icon" />
-    <link rel="alternate" href="index.html" hreflang="en" />
+    <meta name="twitter:creator" content="Indomie Kenya" />
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="alternate" href="indomie.ke" hreflang="en" />
     <link rel="alternate" href="https://indomie.ke" hreflang="no" />
-    <link rel="alternate" href="index.html" hreflang="x-default" />
+    <link rel="alternate" href="indomie.ke" hreflang="x-default" />
     <link href="/app.min.css" rel="stylesheet" />
 </head>
 <body class="body-home">
@@ -38,19 +38,19 @@ upadiv class="overlay-menu">
                     <nav class="primary-nav">
                         <ul class="menu">
                                 <li class="menu-item link-story">
-                                    <a class="masklink" href="/story">The Indomie Story</a>
+                                    <a class="masklink" href="#">The Indomie Story</a>
                                 </li>
                                 <li class="menu-item link-products">
-                                    <a class="masklink" href="/products">Products</a>
+                                    <a class="masklink" href="#">Products</a>
                                 </li>
                                 <li class="menu-item link-inspiration">
-                                    <a class="masklink" href="/inspiration">Inspiration</a>
+                                    <a class="masklink" href="#">Inspiration</a>
                                 </li>
                                 <li class="menu-item link-facts">
-                                    <a class="masklink" href="/facts-and-benefits">Facts and Benefits</a>
+                                    <a class="masklink" href="#">Facts and Benefits</a>
                                 </li>
                                 <li class="menu-item link-about">
-                                    <a class="masklink" href="/about">About Indomie</a>em
+                                    <a class="masklink" href="#">About Indomie</a>em
                                 </li>
                             
                             
@@ -61,10 +61,10 @@ upadiv class="overlay-menu">
                     <nav class="secondary-nav">
                         <ul class="menu">
                                 <li class="menu-item  ">
-                                    <a href="/contact">Contact</a>
+                                    <a href="#">Contact</a>
                                 </li>
                                 <li class="menu-item  ">
-                                    <a href="/privacy-policy">Privacy Policy</a>
+                                    <a href="#">Privacy Policy</a>
                                 </li>
                                 <li class="menu-item wpml-ls-item wpml-ls-current-language">
                                     <a href="/">Home</a>
@@ -140,7 +140,7 @@ upadiv class="overlay-menu">
 
             </div>
             <div class="cell medium-5 img-col">
-                    <img class="fade-in-up" src="/img/1.jpg" alt="Indomie Block pattern">
+                    <img class="fade-in-up" src="/img/10.png" alt="Indomie Block pattern">
             </div>
         </div>
 
@@ -501,7 +501,7 @@ upadiv class="overlay-menu">
 
                     <h2>Facts and Benefits</h2>
 
-                    <p class="rte-style__large_paragraph large">Indomie is made of Wheat flour from Kenya’s finest quality of wheat. Wheat is rich in Vitamin B complex which helps growth and it is part of the composition of many of the enzymes that are catalysts in food dismantle and digestion and is therefore considered essential to obtain the necessary energy for the human body. Vitamin B prevents nerve spasms too.</p>
+                    <p class="rte-style__large_paragraph large">Indomie is made of wheat flour from Kenya’s finest quality of wheat. Wheat is rich in Vitamin B complex which helps growth and it is part of the composition of many of the enzymes that are catalysts in food dismantle and digestion and is therefore considered essential to obtain the necessary energy for the human body. Vitamin B prevents nerve spasms too.</p>
 
                 </div>
 
