--- a/story.html
+++ b/story.html
@@ -3,8 +3,7 @@
 <!DOCTYPE html>
 <html data-edit-mode="False">
 
-<!-- Mirrored from www.maerseaweed.com/en/maer/story/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Sep 2020 07:06:50 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta charset="utf-8">
     <!--Meta tags -->
