--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="/app.min.css" rel="stylesheet" />
 </head>
 <body class="body-home">
-upadiv class="overlay-menu">
+<div class="overlay-menu">
     <div class="background">
         <div class="grid-container">
             <div class="inner">
