--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
     </div>
 </li><li class="accordion-item">
     <div class="accordion-header" data-insp-point="3">
-        <h3><span>Sandwich</span></h3>
+        <h3><span>Tasty</span></h3>
     </div>
     <div class="accordion-body">
         <p>Irresistable</p>
@@ -406,21 +406,21 @@
                   <ul class="accordion">
 <li class="accordion-item">
     <div class="accordion-header" data-insp-point="1">
-        <h3><span>Popcorn</span></h3>
-    </div>
-    <div class="accordion-body">
-        <p></p>
-    </div>
-</li><li class="accordion-item">
-    <div class="accordion-header" data-insp-point="2">
         <h3><span>Breakfast</span></h3>
     </div>
     <div class="accordion-body">
         <p></p>
     </div>
 </li><li class="accordion-item">
-    <div class="accordion-header" data-insp-point="3">
+    <div class="accordion-header" data-insp-point="2">
         <h3><span>Lunch</span></h3>
+    </div>
+    <div class="accordion-body">
+        <p></p>
+    </div>
+</li><li class="accordion-item">
+    <div class="accordion-header" data-insp-point="3">
+        <h3><span>Supper</span></h3>
     </div>
     <div class="accordion-body">
         <p></p>
@@ -543,7 +543,7 @@
                     <div class="anim3">
                         <p><a title="Facebook" href="https://www.facebook.com/indomieKE/" target="_blank" rel="noopener">Facebook</a><br /><a title="Instagram" href="https://www.instagram.com/indomie_kenya/" target="_blank" rel="noopener">Instagram</a><br />
                             <a title="Twitter" href="https://www.twitter.com/indomieKE/" target="_blank" rel="noopener">Twitter</a></p>
-<p><a title="Privacy Policy" href="/privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></p>
+<p><a title="Privacy Policy" href="#" target="_blank" rel="noopener">Privacy Policy</a></p>
                     </div>
 
                 </div>
