--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     <a class="masklink" href="#">Facts and Benefits</a>
                                 </li>
                                 <li class="menu-item link-about">
-                                    <a class="masklink" href="#">About Indomie</a>em
+                                    <a class="masklink" href="#">About Indomie</a>
                                 </li>
                             
                             
