--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         </div>
 
             <div class="cta-wrap">
-                <a class="cta-link" href="/facts-and-benefits"><span>Check out the facts and benefits</span></a>
+                <a class="cta-link" href="#"><span>Check out the facts and benefits</span></a>
             </div>
     </div>
 </section>
