--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <title>Indomie Kenya</title>
-    <meta name="description" content="Indomie Kenya Official website">
+    <meta name="description" content="Indomie Kenya Concept landingpage">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex">
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Indomie.ke" />
     <meta property="og:title" content="Indomie Kenya" />
-    <meta property="og:description" content="Official Indomie Kenya website " />
+    <meta property="og:description" content="Indomie Kenya website " />
     <!-- Twitter tags -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="https://twitter.com/IndomieKenya" />
